# factbird_rs

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  Xargo.toml  application.mk  memory.x  rust.mk
examples/: allocator.rs
linkers/: STM32L475VGTx_FLASH.ld
src/: main.rs
src/c/inc/: FreeRTOSConfig.h  build_info.h  freertos_rs.h  main.h
src/c/src/: main.c  startup_stm32l475xx.s
src/rust/: Cargo.toml
src/rust/.cargo/: config
src/rust/src/: ctypes.rs  freertos_alloc.rs  lib.rs
