[package]
name = "factbird-rs"
version = "0.1.0"
authors = ["Mathias Koch <mk@blackbird.online>"]
keywords = ["arm", "cortex-m"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
cortex-m-semihosting = "0.3.2"

# [dependencies.stm32l4xx-hal]
# # version = "0.3.6"
# git = "https://github.com/stm32-rs/stm32l4xx-hal.git"
# features = ["stm32l4x5", "rt"]

[dependencies.stm32l4]
features = ["stm32l4x5", "rt"]
version = "0.6.0"

[dependencies.cortex-m]
version = "0.6.0"

[dependencies.cortex-m-rt]
version = "0.6.8"

# [dependencies.panic-abort]
# version = "0.3.1"

[dependencies.alloc-cortex-m]
version = "0.3.5"

# [dependencies.freertos_rs]
# git = "https://github.com/hashmismatch/freertos.rs"


[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "target/sysroot"

# this lets you use `cargo fix`!
[[bin]]
name = "factbird-rs"
test = false
bench = false

[profile.dev]
codegen-units = 1

[profile.release]
lto = true # better optimizations
debug = true
